--- a/index.html
+++ b/index.html
@@ -16,119 +16,93 @@
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-
-    <style>
-      // * {
-      //   border: 1px solid red;
-      // }
-      @font-face {
-        font-family: 'KievitWeb';
-        src: url('fonts/KievitWeb.eot'); /* IE9 Compat Modes */
-        src: url('fonts/KievitWeb.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-           url('fonts/KievitWeb.woff') format('woff'); /* Modern Browsers */
-      }
-      body {
-        font-family: KievitWeb;
-      }
-      .header-logo-left {
-        margin: 0;
-        color: #00778a;
-        font-size: 4em;
-        font-weight: 700;
-        line-height: 1;
-        text-transform: uppercase;
-        text-align: right;
-      }
-      .header-logo-right {
-        margin: 0;
-        color: #000;
-        font-size: 1.5em;
-        font-weight: 700;
-        line-height: 1;
-        text-transform: uppercase;
-        text-align: left;
-      }
-      .box {
-        border-radius: 5px;
-        background-color: GhostWhite;
-        border: 1px solid black;
-        padding: 10px;
-        margin: 10px 0px 0px;
-      }
-      .footer {
-        background-color: LightSteelBlue;
-      }
-      @media (min-width: 550px) {
-        .container-widest {
-          width: 90%;
-          max-width: 1000px;
-        }
-        .box {
-          margin: 0;
-        }
-
-      }
-      .center-horiz {
-        text-align: center;
-      }
-    </style>
 
 </head>
 <body>
 
+
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <div class="row center-xs">
-  <div class="col-xs-6 col-sm-4">
+  <div class="col-xs-7 col-sm-5">
     <div class="row middle-xs">
-      <div class="col-xs header-logo-left">
-            N2T
+      <div class="col-xs header-logo-left center-horiz">
+        N2T
       </div>
-      <div class="col-xs header-logo-right">
-            Name To Things
+      <div class="col-xs header-logo-right center-horiz">
+        Name To Things
       </div>
     </div>
   </div>
 </div>
-<div class="row around-xs">
-  <div class="col-xs-5 center-horiz">
-    <div class="box">All identifier types welcome: ARK, DOI, URN, Handle, PMID, ISSN, etc.</div>
+<div class="container-narrowest">
+  <div class="row around-xs middle-xs">
+    <div class="col-xs-10 col-sm-5 center-horiz">
+      <div class="box">All identifier types welcome: ARK, DOI, URN, Handle, PMID, ISSN, etc.</div>
+    </div>
+    <div class="col-xs-10 col-sm-5 center-horiz">
+      <div class="box">Keeps identifiers persistent by forwarding them to their current web addresses</div>
+    </div>
   </div>
-  <div class="col-xs-5 center-horiz">
-    <div class="box">Keeps identifiers persistent by forwarding them to their current web addresses</div>
+  <div class="row">
+    <div class="col-xs center-horiz"><h2>N2T is the global ARK resolver</h2></div>
   </div>
 </div>
-<div class="row">
-  <div class="col-xs center-horiz"><h3>N2T is the global ARK resolver</h3></div>
-</div>
-<div class="row">
-  <div class="col-xs center-horiz">More about Archival Resource Key Identifiers (ARKs)</div>
-  <div class="col-xs center-horiz">ARKS Forum</div>
-  <div class="col-xs center-horiz">Register your organization's interest in assigning ARK identifiers</div>
-</div>
+<div class="container-widest">
+  <div class="row around-xs middle-xs">
+    <div class="col-xs-6 col-sm-4 center-horiz">
+      <div class="box box-linked">
+        <span class="box-linked-text">More about Archival Resource Key Identifiers (ARKs)</span>
+        <span class="box-linked-icon"><img src="images/icon-arrow-right.svg"></span>
+      </div>
+    </div>
+    <div class="col-xs-6 col-sm-4 center-horiz">
+      <div class="box box-linked">
+        <span class="box-linked-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          ARKS Forum
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </span>
+        <span class="box-linked-icon"><img src="images/icon-arrow-right.svg"></span>
+      </div>
+    </div>
+    <div class="col-xs-6 col-sm-4 center-horiz">
+      <div class="box box-linked">
+        <span class="box-linked-text">Register your organization's interest in assigning ARK identifiers</span>
+        <span class="box-linked-icon"><img src="images/icon-arrow-right.svg"></span>
+      </div>
+    </div>
+  </div>
 
-<div class="row">
-  <div class="col-xs center-horiz">********* More content here ********</div>
+  <div class="row">
+    <div class="col-xs center-horiz">********* More content here ********</div>
+  </div>
 </div>
 <div class="row footer">
-  <div class="col-xs-12 col-sm-4">
-    <ul>
-      <li>Lorem Ipsum</li>
-      <li>Lorem Ipsum</li>
-      <li>Lorem Ipsum</li>
-    </ul>
+  <div class="col-xs-12 container-widest">
+    <div class="row">
+    <div class="col-xs-12 col-sm-4">
+      <ul>
+        <li>Lorem Ipsum</li>
+        <li>Lorem Ipsum</li>
+        <li>Lorem Ipsum</li>
+      </ul>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <ul>
+        <li>Lorem Ipsum</li>
+        <li>Lorem Ipsum</li>
+        <li>Lorem Ipsum</li>
+      </ul>
+    </div>
+    <div class="col-xs-12 col-sm-4 first-sm">N2T is ...</div>
+    </div>
   </div>
-  <div class="col-xs-12 col-sm-4">
-    <ul>
-      <li>Lorem Ipsum</li>
-      <li>Lorem Ipsum</li>
-      <li>Lorem Ipsum</li>
-    </ul>
-  </div>
-  <div class="col-xs-12 col-sm-4 first-sm">N2T is ...</div>
 </div>
-<!-- End Document
+  <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
