box-linked style changed from table to inline-block

--- a/index.html
+++ b/index.html
@@ -60,12 +60,7 @@
     </div>
     <div class="col-xs-6 col-sm-4 center-horiz">
       <div class="box box-linked">
-        <span class="box-linked-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          ARKS Forum
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        </span>
+        <span class="box-linked-text">ARKS Forum</span>
         <span class="box-linked-icon"><img src="images/icon-arrow-right.svg"></span>
       </div>
     </div>
