box-linked style now using background-image

--- a/index.html
+++ b/index.html
@@ -52,22 +52,19 @@
 </div>
 <div class="container-widest">
   <div class="row around-xs middle-xs">
-    <div class="col-xs-6 col-sm-4 center-horiz">
+    <div role="button" tabindex="-1" class="col-xs-6 col-sm-4 center-horiz" aria-label="More about Archival Resource Key Identifiers (ARKs)" onclick="handleBtnClick()" onKeyPress="handleBtnClick()">
       <div class="box box-linked">
         <span class="box-linked-text">More about Archival Resource Key Identifiers (ARKs)</span>
-        <span class="box-linked-icon"><img src="images/icon-arrow-right.svg"></span>
       </div>
     </div>
-    <div class="col-xs-6 col-sm-4 center-horiz">
+    <div role="button" tabindex="-1" class="col-xs-6 col-sm-4 center-horiz" aria-label="ARKs Forum" onclick="handleBtnClick()" onKeyPress="handleBtnClick()">
       <div class="box box-linked">
         <span class="box-linked-text">ARKS Forum</span>
-        <span class="box-linked-icon"><img src="images/icon-arrow-right.svg"></span>
       </div>
     </div>
-    <div class="col-xs-6 col-sm-4 center-horiz">
+    <div role="button" tabindex="-1" class="col-xs-6 col-sm-4 center-horiz" aria-label="Register your organization's interest in assigning ARK identifiers" onclick="handleBtnClick()" onKeyPress="handleBtnClick()">
       <div class="box box-linked">
         <span class="box-linked-text">Register your organization's interest in assigning ARK identifiers</span>
-        <span class="box-linked-icon"><img src="images/icon-arrow-right.svg"></span>
       </div>
     </div>
   </div>
