--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <div class="row center-xs">
-  <div class="col-xs-7 col-sm-5">
+  <div class="col-xs-7 col-sm-4">
     <div class="row middle-xs">
       <div class="col-xs header-logo-left center-horiz">
         N2T
@@ -37,42 +37,73 @@
     </div>
   </div>
 </div>
+
 <div class="container-narrowest">
   <div class="row around-xs middle-xs">
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box">All identifier types welcome: ARK, DOI, URN, Handle, PMID, ISSN, etc.</div>
+      <div class="box box-big-text">All identifier types supported: ARK, DOI, URN, Handle, PMID, ISSN, etc.</div>
     </div>
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box">Keeps identifiers persistent by forwarding them to their current web addresses</div>
+      <div class="box box-big-text">Keeps identifiers persistent by forwarding them to their current web addresses</div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-xs center-horiz"><h2>N2T is the global ARK resolver</h2></div>
+  <div class="row around-xs middle-xs">
+    <div class="col-xs-6 col-sm-4 center-horiz">
+      <div class="box box-big-text">N2T resolves for:<br/>
+        <a href="http://ezid.cdlib.org">ezid.cdlib.org</a>,<br/>
+        <a href="http://www.archive.org">archive.org</a>,<br/>
+        <a href="http://www.yamz.net">yamz.net</a>,<br/>
+        <a href="http://www.ebi.ac.uk/">ebi.ac.uk/</a>
+      </div>
+    </div>
+    <div class="col-xs-10 col-sm-6 center-horiz">
+      <div class="box box-big-text">Use N2T to look up info about named things (documents, datasets, books, statues, museum specimens, vocabulary terms, etc.)</div>
+    </div>
+  </div>
+  <div class="row center-xs">
+    <div class="col-xs"><h2>N2T is the global ARK resolver</h2></div>
   </div>
 </div>
+
 <div class="container-widest">
   <div class="row around-xs middle-xs">
-    <div role="button" tabindex="-1" class="col-xs-6 col-sm-4 center-horiz" aria-label="More about Archival Resource Key Identifiers (ARKs)" onclick="handleBtnClick()" onKeyPress="handleBtnClick()">
-      <div class="box box-linked">
+    <div class="col-xs-6 col-sm-4 center-horiz">
+      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('http://www.google.com')" aria-label="More about Archival Resource Key Identifiers (ARKs)">
         <span class="box-linked-text">More about Archival Resource Key Identifiers (ARKs)</span>
-      </div>
+      </button>
     </div>
-    <div role="button" tabindex="-1" class="col-xs-6 col-sm-4 center-horiz" aria-label="ARKs Forum" onclick="handleBtnClick()" onKeyPress="handleBtnClick()">
-      <div class="box box-linked">
+    <div class="col-xs-6 col-sm-4 center-horiz">
+      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('http://www.google.com')" aria-label="ARKS Forum">
         <span class="box-linked-text">ARKS Forum</span>
-      </div>
+      </button>
     </div>
-    <div role="button" tabindex="-1" class="col-xs-6 col-sm-4 center-horiz" aria-label="Register your organization's interest in assigning ARK identifiers" onclick="handleBtnClick()" onKeyPress="handleBtnClick()">
-      <div class="box box-linked">
+    <div class="col-xs-6 col-sm-4 center-horiz">
+      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('http://www.google.com')" aria-label="Register your organization's interest in assigning ARK identifiers">
         <span class="box-linked-text">Register your organization's interest in assigning ARK identifiers</span>
-      </div>
+      </button>
     </div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs center-horiz">********* More content here ********</div>
   </div>
 </div>
+
+<div class="container-narrowest">
+  <div class="row center-xs">
+    <div class="col-xs-7">
+      <h2>N2T partners with identifier.org to resolve over 600 identifier <a href="http://wiki.c2.com/?IdentifierPrefix">prefix</a> types</h2>
+    </div>
+  </div>
+  <div class="row center-xs">
+    <div class="col-xs-6 col-sm-4 center-horiz">
+      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('http://www.google.com')" aria-label="Request an Identifier Prefix">
+        <span class="box-linked-text">Request an Identifier Prefix</span>
+      </button>
+    </div>
+  </div>
+</div>
+<div class="row center-xs">
+  &nbsp;<br/>
+  &nbsp;<br/>
+</div>
+
 <div class="row footer">
   <div class="col-xs-12 container-widest">
     <div class="row">
@@ -94,6 +125,12 @@
     </div>
   </div>
 </div>
+
+  <script type="text/javascript">
+    function btnHref(url) {
+      window.location = url;
+    };
+  </script>
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
