--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <!-- Primary Page Content
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <div class="row center-xs">
-  <div class="col-xs-7 col-sm-4">
+  <div class="col-xs-10 col-sm-5">
     <div class="row middle-xs">
       <div class="col-xs header-logo-left center-horiz">
         N2T
       </div>
       <div class="col-xs header-logo-right center-horiz">
-        Name To Things
+        Resolving Names Into Things
       </div>
     </div>
   </div>
@@ -41,27 +41,27 @@
 <div class="container-narrowest">
   <div class="row around-xs middle-xs">
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box box-big-text">All identifier types supported: ARK, DOI, URN, Handle, PMID, ISSN, etc.</div>
+      <div class="box box-big-text">Resolves (forwards) any identifier type: ARK, DOI, URN, Handle, PMID, GRID, ISSN, etc.</div>
     </div>
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box box-big-text">Keeps identifiers persistent by forwarding them to their current web addresses</div>
+      <div class="box box-big-text">Keeps identifiers persistent, forwarding users to the best known web addresses</div>
     </div>
   </div>
   <div class="row around-xs middle-xs">
     <div class="col-xs-6 col-sm-4 center-horiz">
-      <div class="box box-big-text">N2T resolves for:<br/>
-        <a href="http://ezid.cdlib.org">ezid.cdlib.org</a>,<br/>
-        <a href="http://www.archive.org">archive.org</a>,<br/>
-        <a href="http://www.yamz.net">yamz.net</a>,<br/>
-        <a href="http://www.ebi.ac.uk/">ebi.ac.uk/</a>
+      <div class="box box-big-text">In partnership with:<br/>
+        <a href="http://ezid.cdlib.org">EZID</a>,<br/>
+        <a href="http://identifiers.org">Identifiers.org</a>,<br/>
+        <a href="http://www.archive.org">Internet Archive</a>,<br/>
+        <a href="http://www.yamz.net">YAMZ Metadictionary</a>
       </div>
     </div>
     <div class="col-xs-10 col-sm-6 center-horiz">
-      <div class="box box-big-text">Use N2T to look up info about named things (documents, datasets, books, statues, museum specimens, vocabulary terms, etc.)</div>
+      <div class="box box-big-text">For any kind of named thing -- digital documents and datasets, physical museum specimens, abstract vocabulary terms, etc.</div>
     </div>
   </div>
   <div class="row center-xs">
-    <div class="col-xs"><h2>N2T is the global ARK resolver</h2></div>
+    <div class="col-xs"><h2>N2T is also a global ARK resolver</h2></div>
   </div>
 </div>
 
@@ -69,30 +69,32 @@
   <div class="row around-xs middle-xs">
     <div class="col-xs-6 col-sm-4 center-horiz">
       <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://confluence.ucop.edu/display/Curation/ARK')" aria-label="More about Archival Resource Key Identifiers (ARKs)">
-        <span class="box-linked-text">More about Archival Resource Key Identifiers (ARKs)</span>
-      </button>
-    </div>
-    <div class="col-xs-6 col-sm-4 center-horiz">
-      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://groups.google.com/forum/?hl=en#!forum/arks-forum')" aria-label="ARKS Forum">
-        <span class="box-linked-text">ARKS Forum</span>
+        <span class="box-linked-text">About ARK (Archival Resource Key) Identifiers</span>
       </button>
     </div>
     <div class="col-xs-6 col-sm-4 center-horiz">
       <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://goo.gl/forms/bmckLSPpbzpZ5dix1')" aria-label="Register your organization's interest in assigning ARK identifiers">
-        <span class="box-linked-text">Register your organization's interest in assigning ARK identifiers</span>
+        <span class="box-linked-text">Register to assign ARKs</span>
+      </button>
+    </div>
+    <div class="col-xs-6 col-sm-4 center-horiz">
+      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://groups.google.com/forum/?hl=en#!forum/arks-forum')" aria-label="ARKS Forum">
+        <span class="box-linked-text">ARKS discussion forum</span>
       </button>
     </div>
   </div>
 </div>
 
+  <!-- Spacer 
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<div class="row center-xs">
+  &nbsp;<br/>
+</div>
+
 <div class="container-narrowest">
   <div class="row center-xs">
-    <div class="col-xs-7">
-      <h2>N2T partners with identifier.org to resolve over 600 identifier <a href="http://wiki.c2.com/?IdentifierPrefix">prefix</a> types</h2>
-    </div>
-  </div>
-  <div class="row center-xs">
-    <div class="col-xs-6 col-sm-4 center-horiz">
+    <div class="box col-xs-8">
+      <h2>N2T works with the <a href="http://identifiers.org">European Bioinformatics Institute</a> to resolve over 700 identifier classes using <a href="http://wiki.c2.com/?IdentifierPrefix">prefixes</a>. You can add yours too.</h2>
       <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('http://www.n2t.net/e/prefix_request')" aria-label="Request an Identifier Prefix">
         <span class="box-linked-text">Request an Identifier Prefix</span>
       </button>
@@ -111,21 +113,26 @@
 <div class="row footer">
   <div class="col-xs-12 container-widest">
     <div class="row">
-    <div class="col-xs-12 col-sm-4">
-      <ul>
-        <li>Lorem Ipsum</li>
-        <li>Lorem Ipsum</li>
-        <li>Lorem Ipsum</li>
-      </ul>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <ul>
-        <li>Lorem Ipsum</li>
-        <li>Lorem Ipsum</li>
-        <li>Lorem Ipsum</li>
-      </ul>
-    </div>
-    <div class="col-xs-12 col-sm-4 first-sm">N2T is ...</div>
+      <div class="col-xs-12 col-sm-12">
+        <p class="text-sm">N2T is a service of the <a href="http://www.cdlib.org/">California Digital Library</a>, a division of the <a href="http://www.universityofcalifornia.edu/">University of California Office of the President</a></p>
+        <p class="text-sm">&copy; 2017 The Regents of the University of California</p>
+
+      </div>
+      <!-- div class="col-xs-12 col-sm-4">
+        <ul>
+          <li>Lorem Ipsum</li>
+          <li>Lorem Ipsum</li>
+          <li>Lorem Ipsum</li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <ul>
+          <li>Lorem Ipsum</li>
+          <li>Lorem Ipsum</li>
+          <li>Lorem Ipsum</li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-sm-4 first-sm">N2T is ...</div -->
     </div>
   </div>
 </div>
