--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 <div class="row center-xs">
   <div class="col-xs-10 col-sm-5">
     <div class="row middle-xs">
-      <div class="col-xs header-logo-left center-horiz">
+      <h1 class="col-xs header-logo-left center-horiz">
         N2T
-      </div>
-      <div class="col-xs header-logo-right center-horiz">
+      </h1>
+      <h1 class="col-xs header-logo-right center-horiz">
         Resolving Names Into Things
-      </div>
+      </h1>
     </div>
   </div>
 </div>
@@ -59,6 +59,11 @@
     <div class="col-xs-10 col-sm-6 center-horiz">
       <div class="box bg-grey box-big-text">For any kind of named thing -- digital documents and datasets, physical museum specimens, abstract vocabulary terms, etc.</div>
     </div>
+  </div>
+  <!-- Spacer 
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="row center-xs">
+    &nbsp;
   </div>
   <div class="row center-xs">
     <div class="col-xs"><h2 class="header2">N2T is also a global ARK resolver</h2></div>
