--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 <div class="container-narrowest">
   <div class="row around-xs middle-xs">
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box bg-grey box-big-text">Resolves (forwards) any identifier type: ARK, DOI, URN, Handle, PMID, GRID, ISSN, etc.</div>
+      <div class="box box-big-text">Resolves (forwards) any identifier type: ARK, DOI, URN, Handle, PMID, GRID, ISSN, etc.</div>
     </div>
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box bg-grey box-big-text">Keeps identifiers persistent, forwarding users to the best known web addresses</div>
+      <div class="box box-big-text">Keeps identifiers persistent, forwarding users to the best known web addresses</div>
     </div>
   </div>
   <div class="row around-xs middle-xs">
     <div class="col-xs-6 col-sm-4 center-horiz">
-      <div class="box bg-grey box-big-text">In partnership with:<br/>
+      <div class="box box-big-text">In partnership with:<br/>
         <a href="http://ezid.cdlib.org">EZID</a>,<br/>
         <a href="http://identifiers.org">Identifiers.org</a>,<br/>
         <a href="http://www.archive.org">Internet Archive</a>,<br/>
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="col-xs-10 col-sm-6 center-horiz">
-      <div class="box bg-grey box-big-text">For any kind of named thing -- digital documents and datasets, physical museum specimens, abstract vocabulary terms, etc.</div>
+      <div class="box box-big-text">For any kind of named thing -- digital documents and datasets, physical museum specimens, abstract vocabulary terms, etc.</div>
     </div>
   </div>
   <!-- Spacer 
@@ -66,7 +66,9 @@
     &nbsp;
   </div>
   <div class="row center-xs">
-    <div class="col-xs"><h2 class="header2">N2T is also a global ARK resolver</h2></div>
+    <div class="col-xs-7">
+      <div class="box"><h2 class="header2">N2T is also a global ARK resolver</h2></div>
+    </div>
   </div>
 </div>
 
@@ -98,7 +100,7 @@
 
 <div class="container-narrowest">
   <div class="row center-xs">
-    <div class="box bg-grey col-xs-8">
+    <div class="box col-xs-8">
       <h2 class="header2">N2T works with the <a href="http://identifiers.org">European Bioinformatics Institute</a> to resolve over 700 identifier classes using <a href="http://wiki.c2.com/?IdentifierPrefix">prefixes</a>. You can add yours too.</h2>
       <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('http://www.n2t.net/e/prefix_request')" aria-label="Request an Identifier Prefix">
         <span class="box-linked-text">Request an Identifier Prefix</span>
