--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/flexboxgrid-6.3.1-min.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="shortcut icon" type="image/png" href="images/favicon.ico?v=2"/>
+  <link rel="icon" sizes="16x16 32x32" href="images/favicon.ico?v=2">
 
 </head>
 <body>
