--- a/index2.html
+++ b/index2.html
@@ -42,15 +42,15 @@
 <div class="container-narrowest">
   <div class="row around-xs middle-xs">
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box box-big-text">Resolves (forwards) any identifier type: ARK, DOI, URN, Handle, PMID, GRID, ISSN, etc.</div>
+      <div class="box box-big-text box-set-height">Resolves (forwards) any identifier type: ARK, DOI, URN, Handle, PMID, GRID, ISSN, etc.</div>
     </div>
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box box-big-text">Keeps identifiers persistent, forwarding users to the best known web addresses</div>
+      <div class="box box-big-text box-set-height">Keeps identifiers persistent, forwarding users to the best known web addresses</div>
     </div>
   </div>
   <div class="row around-xs middle-xs">
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box box-big-text">In partnership with:<br/>
+      <div class="box box-big-text box-set-height">In partnership with:<br/>
         <a href="http://ezid.cdlib.org">EZID</a>,<br/>
         <a href="http://identifiers.org">Identifiers.org</a>,<br/>
         <a href="http://www.archive.org">Internet Archive</a>,<br/>
@@ -58,7 +58,7 @@
       </div>
     </div>
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box box-big-text">For any kind of named thing -- digital documents and datasets, physical museum specimens, abstract vocabulary terms, etc.</div>
+      <div class="box box-big-text box-set-height">For any kind of named thing -- digital documents and datasets, physical museum specimens, abstract vocabulary terms, etc.</div>
     </div>
   </div>
   <!-- Spacer 
