--- a/index2.html
+++ b/index2.html
@@ -45,7 +45,7 @@
       <div class="box-fixed box-big-text">Resolves (forwards) any identifier type: ARK, DOI, URN, Handle, PMID, GRID, ISSN, etc.</div>
     </div>
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box-fixed box-big-text">Keeps identifiers persistent, forwarding users to the best known web addresses</div>
+      <div class="box-fixed box-big-text">Keeps names (identifiers) persistent, forwarding users to the best known web addresses</div>
     </div>
   </div>
   <div class="row around-xs middle-xs">
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box-fixed box-big-text">For any kind of named thing -- digital documents and datasets, physical museum specimens, abstract vocabulary terms, etc.</div>
+      <div class="box-fixed box-big-text">Any kind of thing -- digital documents and datasets, physical museum specimens, abstract vocabulary terms, etc.</div>
     </div>
   </div>
   <!-- Spacer 
