Header Logo right side

--- a/index2.html
+++ b/index2.html
@@ -26,18 +26,19 @@
 
   <!-- Primary Page Content
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="row center-xs">
-  <div class="col-xs-10 col-sm-5">
-    <div class="row middle-xs">
+<header class="header row center-xs">
+  <div class="col-xs-10 col-sm-6">
+    <div class="row middle-xs header">
       <h1 class="col-xs header-logo-left center-horiz">
         N2T
       </h1>
-      <h1 class="col-xs header-logo-right center-horiz">
-        Resolving Names Into Things
-      </h1>
+      <picture class="col-xs header-logo-right center-horiz">
+        <source srcSet="images/LogoRight_178x56.png" media="(min-width: 32em)"/>
+        <img src="images/LogoRight_140x40.png" alt="Resolving Names Into Things"/>
+      </picture>
     </div>
   </div>
-</div>
+</header>
 
 <div class="container-narrowest">
   <div class="row around-xs middle-xs">
