John's changes from July 23, 2017

--- a/index2.html
+++ b/index2.html
@@ -43,19 +43,14 @@
 <div class="container-narrowest">
   <div class="row around-xs middle-xs">
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box-fixed box-big-text">Resolves (forwards) any identifier type: ARK, DOI, URN, Handle, PMID, GRID, ISSN, etc.</div>
+      <div class="box-fixed box-big-text">Keeps names (identifiers) persistent, forwarding (resolving) them to the best known web addresses</div>
     </div>
-    <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box-fixed box-big-text">Keeps names (identifiers) persistent, forwarding users to the best known web addresses</div>
-    </div>
-  </div>
-  <div class="row around-xs middle-xs">
     <div class="col-xs-10 col-sm-5 center-horiz">
       <div class="box-fixed box-big-text">
         <section>
           <span>In partnership with:</span>
           <ul class="list">
-            <li><a href="http://ezid.cdlib.org">EZID</a></li>
+            <li><a href="http://ezid.cdlib.org">EZID.cdlib.org</a></li>
             <li><a href="http://identifiers.org">Identifiers.org</a></li>
             <li><a href="http://www.archive.org">Internet Archive</a></li>
             <li><a href="http://www.yamz.net">YAMZ Metadictionary</a></li>
@@ -63,8 +58,13 @@
         </section>
       </div>
     </div>
+  </div>
+  <div class="row around-xs middle-xs">
     <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box-fixed box-big-text">Any kind of thing -- digital documents and datasets, physical museum specimens, abstract vocabulary terms, etc.</div>
+      <div class="box-fixed box-big-text">Any kind of name – ARK, DOI, URN, Handle, PMID, PDB, Taxon, GRID, arxiv, ISSN, ...</div>
+    </div>
+    <div class="col-xs-10 col-sm-5 center-horiz">
+      <div class="box-fixed box-big-text">Any kind of thing -- web pages, data, physical specimens, vocabulary terms, living beings, groups, ...</div>
     </div>
   </div>
   <!-- Spacer 
@@ -83,17 +83,17 @@
   <div class="row around-xs middle-xs">
     <div class="col-xs-6 col-sm-4 center-horiz">
       <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://confluence.ucop.edu/display/Curation/ARK')" aria-label="More about Archival Resource Key Identifiers (ARKs)">
-        <span class="box-linked-text">About ARK (Archival Resource Key) Identifiers</span>
+        <span class="box-linked-text">About ARK Identifiers</span>
       </button>
     </div>
     <div class="col-xs-6 col-sm-4 center-horiz">
       <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://goo.gl/forms/bmckLSPpbzpZ5dix1')" aria-label="Register your organization's interest in assigning ARK identifiers">
-        <span class="box-linked-text">Register to assign ARKs</span>
+        <span class="box-linked-text">Register to assign ARKs (it's free)</span>
       </button>
     </div>
     <div class="col-xs-6 col-sm-4 center-horiz">
-      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://groups.google.com/forum/?hl=en#!forum/arks-forum')" aria-label="ARKS Forum">
-        <span class="box-linked-text">ARKS discussion forum</span>
+      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://groups.google.com/forum/?hl=en#!forum/arks-forum')" aria-label="ARKs Forum">
+        <span class="box-linked-text">ARKs discussion forum</span>
       </button>
     </div>
   </div>
@@ -108,7 +108,7 @@
 <div class="container-narrowest">
   <div class="row center-xs">
     <div class="box col-xs-8">
-      <h2 class="header2">N2T works with the <a href="http://identifiers.org">European Bioinformatics Institute</a> to resolve over 700 identifier classes using <a href="http://wiki.c2.com/?IdentifierPrefix">prefixes</a>. You can add yours too.</h2>
+      <h2 class="header2">N2T works with <a href="http://identifiers.org">Identifiers.org</a> to resolve over 500 prefixed identifier classes. You can add yours too.</h2>
       <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('http://www.n2t.net/e/prefix_request')" aria-label="Request an Identifier Prefix">
         <span class="box-linked-text">Request an Identifier Prefix</span>
       </button>
