Breadcrumb; and 1st pass at About page

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <link rel="icon" sizes="16x16 32x32" href="images/favicon.ico?v=2">
 
 </head>
-<body class="background-home">
+<body>
 
 
   <!-- Primary Page Content
@@ -44,92 +44,48 @@
   <div class="container-widest">
     <nav class="col-xs-12 breadcrumb">
       <ul>
-        <li><a href="about.html">About N2T</a></li>
+        <li><a href="/">Home</a></li>
+        <li>About N2T</li>
       </ul>
     </nav>
   </div>
 </div>
 
 <div class="container-narrowest">
-  <div class="row around-xs middle-xs">
-    <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box-fixed box-big-text">Keeps names (identifiers) persistent, forwarding (resolving) them to the best known web addresses</div>
-    </div>
-    <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box-fixed box-big-text">
-        <section>
-          <span>In partnership with:</span>
-          <ul class="list">
-            <li><a href="http://ezid.cdlib.org">EZID.cdlib.org</a></li>
-            <li><a href="http://identifiers.org">Identifiers.org</a></li>
-            <li><a href="http://www.archive.org">Internet Archive</a></li>
-            <li><a href="http://www.yamz.net">YAMZ Metadictionary</a></li>
-          </ul>
-        </section>
-      </div>
-    </div>
-  </div>
-  <div class="row around-xs middle-xs">
-    <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box-fixed box-big-text">Any kind of name – ARK, DOI, URN, Handle, PMID, PDB, Taxon, GRID, arxiv, ISSN, ...</div>
-    </div>
-    <div class="col-xs-10 col-sm-5 center-horiz">
-      <div class="box-fixed box-big-text">Any kind of thing -- web pages, data, physical specimens, vocabulary terms, living beings, groups, ...</div>
-    </div>
-  </div>
-  <!-- Spacer 
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="row center-xs">
-    &nbsp;
-  </div>
-  <div class="row center-xs">
-    <div class="col-xs-8">
-      <div class="box"><h2 class="header2">N2T is also a global ARK resolver</h2></div>
-    </div>
-  </div>
-</div>
-
-<div class="container-widest">
-  <div class="row around-xs middle-xs">
-    <div class="col-xs-6 col-sm-4 center-horiz">
-      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://confluence.ucop.edu/display/Curation/ARK')" aria-label="More about Archival Resource Key Identifiers (ARKs)">
-        <span class="box-linked-text">About ARK Identifiers</span>
-      </button>
-    </div>
-    <div class="col-xs-6 col-sm-4 center-horiz">
-      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://goo.gl/forms/bmckLSPpbzpZ5dix1')" aria-label="Register your organization's interest in assigning ARK identifiers">
-        <span class="box-linked-text">Register to assign ARKs (it's free)</span>
-      </button>
-    </div>
-    <div class="col-xs-6 col-sm-4 center-horiz">
-      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://groups.google.com/forum/?hl=en#!forum/arks-forum')" aria-label="ARKs Forum">
-        <span class="box-linked-text">ARKs discussion forum</span>
-      </button>
-    </div>
-  </div>
+<section>
+  <h1>Heading Level 1 Lorem Ipsum Dolor Sit Amet</h1>
+  <h2>Heading Level 2 Lorem Ipsum Dolor Sit Amet</h2>
+  <h3>Heading Level 3 Lorem Ipsum Dolor Sit Amet</h3>
+  <h4>Heading Level 4 Lorem Ipsum Dolor Sit Amet</h4>
+  <p>Paragraph containing links. Each minter is associated with a shoulder, usually a short string, such as "fk4", that extends an identifier base, such as "99999" (see <a href="https://confluence.ucop.edu/display/DataCite/Identifier+Basics">Identifier Basics</a> and <a href="https://confluence.ucop.edu/display/Curation/Identifier+Conventions">Identifier Conventions</a> for details.</p>
+  <ul>
+    <li>Unordered list</li>
+    <li>Debitis voluptate, corporis velit fugiat nostrum culpa</li>
+    <li>Aperiam natus vero, dolorum facere a consectetur odit eos eaque sit accusamus</li>
+    <li>Et fugiat dolorum dolores quo totam repellat</li>
+  </ul>
+  <img src="http://via.placeholder.com/400x100?text=Responsive+Image"/>
+  <ol>
+    <li>Ordered list
+    </li>
+    <li>Vero reprehenderit eos quasi ut commodi deleniti incidunt alias suscipit quia iure repellendus
+    </li>
+    <li>Omnis iusto impedit unde autem, nostrum quos quaerat rerum voluptate quasi
+    </li>
+    <li>Iusto, sit repellat facilis obcaecati ipsa exercitationem id voluptatibus impedit blanditiis
+    </li>
+  </ol>
+  <blockquote>Blockquote. Magni quo assumenda, voluptatum tempore itaque perspiciatis excepturi earum voluptatibus dolorum placeat nam fugiat inventore praesentium adipisci libero eos, fugit veritatis minima.
+  </blockquote>
+  <p>Bold and italicized text. Cupiditate provident voluptas, <strong>commodi quos eius necessitatibus eveniet</strong> modi architecto quas <em>itaque culpa dolor possimus rem magni laboriosam!</em> Saepe beatae deserunt minus.
+  </p>
+</section>
 </div>
 
   <!-- Spacer 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <div class="row center-xs">
   &nbsp;<br/>
-</div>
-
-<div class="container-narrowest">
-  <div class="row center-xs">
-    <div class="box col-xs-8">
-      <h2 class="header2">N2T works with <a href="http://identifiers.org">Identifiers.org</a> to resolve over 500 prefixed identifier classes. You can add yours too.</h2>
-      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('http://www.n2t.net/e/prefix_request')" aria-label="Request an Identifier Prefix">
-        <span class="box-linked-text">Request an Identifier Prefix</span>
-      </button>
-    </div>
-  </div>
-</div>
-
-  <!-- Spacer 
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="row center-xs">
-  &nbsp;<br/>&nbsp;<br/>
 </div>
 
   <!-- Footer
