--- a/about.html
+++ b/about.html
@@ -1,55 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Name-to-Thing (N2T) Identifier Resolver</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/flexboxgrid-6.3.1-min.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="shortcut icon" type="image/png" href="images/favicon.ico?v=2"/>
-  <link rel="icon" sizes="16x16 32x32" href="images/favicon.ico?v=2">
-
-</head>
+<!--#include virtual="prelim.html" -->
 <body>
-
-
-  <!-- Primary Page Content
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<header class="header row center-xs">
-  <div class="col-xs-10 col-sm-6">
-    <div class="row middle-xs header">
-      <h1 class="col-xs header-logo-left center-horiz">
-        N2T
-      </h1>
-      <picture class="col-xs header-logo-right center-horiz">
-        <source srcSet="images/LogoRight_178x56.png" media="(min-width: 32em)"/>
-        <img src="images/LogoRight_140x40.png" alt="Resolving Names Into Things"/>
-      </picture>
-    </div>
-  </div>
-</header>
-
-<div class="container-breadcrumb">
-  <div class="container-widest">
-    <nav class="col-xs-12 breadcrumb">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li>About N2T</li>
-      </ul>
-    </nav>
-  </div>
-</div>
+<!--#include virtual="header.html" -->
+<!--#include virtual="breadcrumb_about.html" -->
 
 <div class="container-narrowest">
 <section>
@@ -82,50 +36,7 @@
 </section>
 </div>
 
-  <!-- Spacer 
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="row center-xs">
-  &nbsp;<br/>
-</div>
+<!--#include virtual="footer.html" -->
 
-  <!-- Footer
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="row footer">
-  <div class="col-xs-12 container-widest">
-    <div class="row">
-      <div class="col-xs-12 col-sm-12">
-        <p class="text-sm">N2T is a service of the <a href="http://www.cdlib.org/">California Digital Library</a>, a division of the <a href="http://www.universityofcalifornia.edu/">University of California Office of the President</a></p>
-        <p class="text-sm">&copy; 2017 The Regents of the University of California</p>
-
-      </div>
-      <!-- div class="col-xs-12 col-sm-4">
-        <ul>
-          <li>Lorem Ipsum</li>
-          <li>Lorem Ipsum</li>
-          <li>Lorem Ipsum</li>
-        </ul>
-      </div>
-      <div class="col-xs-12 col-sm-4">
-        <ul>
-          <li>Lorem Ipsum</li>
-          <li>Lorem Ipsum</li>
-          <li>Lorem Ipsum</li>
-        </ul>
-      </div>
-      <div class="col-xs-12 col-sm-4 first-sm">N2T is ...</div -->
-    </div>
-  </div>
-</div>
-
-  <!-- Function for button links 
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script type="text/javascript">
-    function btnHref(url) {
-      window.location = url;
-    };
-  </script>
-
-  <!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
