--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--#include virtual="prelim.html" -->
-<body class="background-home">
-<!--#include virtual="header.html" -->
+<head>
+<!-- Basic Page Needs -->
+  <meta charset="utf-8">
+  <title>Name-to-Thing (N2T) Identifier Resolver</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
 
+  <!-- Mobile Specific Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="e/css/flexboxgrid-6.3.1-min.css">
+  <link rel="stylesheet" href="e/css/styles.css">
+  <link rel="stylesheet" href="e/css/styles_rst.css">
+  <link rel="shortcut icon" type="image/png" href="e/images/favicon.ico?v=2"/>
+  <link rel="icon" sizes="16x16 32x32" href="e/images/favicon.ico?v=2">
+</head>
+
+<body class="background-home">
+<header class="header row center-xs">
+  <div class="col-xs-10 col-sm-6">
+    <div class="row middle-xs header">
+      <h1 class="col-xs header-logo-left center-horiz">
+      N2T
+      </h1>
+      <picture class="col-xs header-logo-right center-horiz">
+        <source srcSet="e/images/LogoRight_178x56.png" media="(min-width: 32em)"/>
+        <img src="e/images/LogoRight_140x40.png" alt="Resolving Names Into Things"/>
+      </picture>
+    </div>
+  </div>
+</header>
 <div class="container-breadcrumb">
   <div class="container-widest">
     <nav class="col-xs-12 breadcrumb">
       <ul>
-        <li><a href="about.html">About N2T</a></li>
+        <li><a href="e/about.html">About N2T</a></li>
       </ul>
     </nav>
   </div>
@@ -90,17 +118,44 @@
   </div>
 </div>
 
-<!--#include virtual="footer.html" -->
+  <!-- Spacer -->
+  <div class="row center-xs">
+    &nbsp;<br/>
+  </div>
 
-  <!-- Function for button links 
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Footer -->
+  <div class="row footer">
+    <div class="col-xs-12 container-widest">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12">
+          <p class="text-sm">N2T is a service of the <a href="http://www.cdlib.org/">California Digital Library</a>, a division of the <a href="http://www.universityofcalifornia.edu/">University of California Office of the President</a></p>
+          <p class="text-sm">&copy; 2017 The Regents of the University of California</p>
+        </div>
+        <!-- div class="col-xs-12 col-sm-4">
+          <ul>
+            <li>Lorem Ipsum</li>
+            <li>Lorem Ipsum</li>
+            <li>Lorem Ipsum</li>
+          </ul>
+        </div>
+      <div class="col-xs-12 col-sm-4">
+        <ul>
+          <li>Lorem Ipsum</li>
+          <li>Lorem Ipsum</li>
+          <li>Lorem Ipsum</li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-sm-4 first-sm">N2T is ...</div --> </div>
+    </div>
+  </div>
+
+  <!-- Function for button links -->
   <script type="text/javascript">
     function btnHref(url) {
       window.location = url;
     };
   </script>
 
-  <!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- End Document -->
 </body>
 </html>
