--- a/prelim.html
+++ b/prelim.html
@@ -1,7 +1,5 @@
-<head>
   <!-- Basic Page Needs -->
   <meta charset="utf-8">
-  <title>Name-to-Thing (N2T) Identifier Resolver</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -9,10 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/flexboxgrid-6.3.1-min.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/styles_rst.css">
-  <link rel="shortcut icon" type="image/png" href="images/favicon.ico?v=2"/>
-  <link rel="icon" sizes="16x16 32x32" href="images/favicon.ico?v=2">
-
-</head>
+  <link rel="stylesheet" href="/e/css/flexboxgrid-6.3.1-min.css">
+  <link rel="stylesheet" href="/e/css/styles.css">
+  <link rel="stylesheet" href="/e/css/styles_rst.css">
+  <link rel="shortcut icon" type="image/png" href="/e/images/favicon.ico?v=2"/>
+  <link rel="icon" sizes="16x16 32x32" href="/e/images/favicon.ico?v=2">
