yet more things updated in Jan

--- a/footer.html
+++ b/footer.html
@@ -8,8 +8,8 @@
   <div class="col-xs-12 container-widest">
     <div class="row">
       <div class="col-xs-12 col-sm-12">
-        <p class="text-sm">N2T is a service of the <a href="http://www.cdlib.org/">California Digital Library</a>, a division of the <a href="http://www.universityofcalifornia.edu/">University of California Office of the President</a></p>
-        <p class="text-sm">&copy; 2017 The Regents of the University of California</p>
+        <p class="text-sm">N2T.net is a service of the <a href="http://www.cdlib.org/">California Digital Library</a>, a division of the <a href="http://www.universityofcalifornia.edu/">University of California Office of the President</a></p>
+        <p class="text-sm">&copy; 2018 The Regents of the University of California</p>
 
       </div>
       <!-- div class="col-xs-12 col-sm-4">
