--- a/header.html
+++ b/header.html
@@ -5,8 +5,8 @@
         N2T
       </h1>
       <picture class="col-xs header-logo-right center-horiz">
-        <source srcSet="images/LogoRight_178x56.png" media="(min-width: 32em)"/>
-        <img src="images/LogoRight_140x40.png" alt="Resolving Names Into Things"/>
+        <source srcSet="/e/images/LogoRight_178x56.png" media="(min-width: 32em)"/>
+        <img src="/e/images/LogoRight_140x40.png" alt="Resolving Names Into Things"/>
       </picture>
     </div>
   </div>
