--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <div class="container-widest">
   <div class="row around-xs middle-xs">
     <div class="col-xs-6 col-sm-4 center-horiz">
-      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://confluence.ucop.edu/display/Curation/ARK')" aria-label="More about Archival Resource Key Identifiers (ARKs)">
+      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('/e/ark_ids.html')" aria-label="More about Archival Resource Key Identifiers (ARKs)">
         <span class="box-linked-text">About ARK Identifiers</span>
       </button>
     </div>
