Touchups, mainly NOID page and Homepage

--- a/breadcrumb_noid.html
+++ b/breadcrumb_noid.html
@@ -3,9 +3,8 @@
     <nav class="col-xs-12 breadcrumb">
       <ul>
         <li><a href="/">Home</a></li>
-        <li>API Documentation</li>
+        <li>NOID: Nice Opaque IDentifier (Minter and Name Resolver)</li>
       </ul>
     </nav>
   </div>
 </div>
-
