--- a/homepage.html
+++ b/homepage.html
@@ -72,6 +72,32 @@
       <div class="box-fixed box-big-text">Any kind of thing – web pages, data, physical specimens, vocabulary terms, living beings, groups, ...</div>
     </div>
   </div>
+
+  <!-- Spacer 
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<div class="row center-xs">
+  &nbsp;<br/>
+</div>
+
+<div class="container-narrowest">
+  <div class="row center-xs">
+    <div class="box-bigger col-xs-5">
+      <h2 class="header2">N2T works with
+      <a href="https://identifiers.org">Identifiers.org</a>
+      to shorten and resolve over 700 kinds of schemes or
+         <a href="/e/compact_ids.html">prefixed identifiers</a>
+      </h2>
+      <div class="row center-xs">
+        <button type="button" class="box box-linked col-xs-9" aria-pressed="false"
+          onclick="btnHref('https://www.n2t.net/e/prefix_request')"
+  	aria-label="You can add your existing scheme (it's free)">
+          You can add your existing scheme (it's free)
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
   <!-- Spacer 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="row center-xs">
@@ -83,45 +109,26 @@
     </div>
   </div>
 </div>
-
 <div class="container-widest">
   <div class="row around-xs middle-xs">
-    <div class="col-xs-6 col-sm-4 center-horiz">
+    <div class="col-xs-6 col-sm-3 center-horiz">
       <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('/e/ark_ids.html')" aria-label="More about Archival Resource Key Identifiers (ARKs)">
         <span class="box-linked-text">About ARK Identifiers</span>
       </button>
     </div>
-    <div class="col-xs-6 col-sm-4 center-horiz">
+    <div class="col-xs-6 col-sm-3 center-horiz">
+      <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://wiki.duraspace.org/display/DSP/ARKs+in+the+Open+Project')" aria-label="CDL and Duraspace building an open, international community around Archival Resource Keys (ARKs)">
+        <span class="box-linked-text">ARKs in the Open</span>
+      </button>
+    </div>
+    <div class="col-xs-6 col-sm-3 center-horiz">
       <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://goo.gl/forms/bmckLSPpbzpZ5dix1')" aria-label="Register your organization's interest in assigning ARK identifiers">
         <span class="box-linked-text">Register to assign ARKs (it's free)</span>
       </button>
     </div>
-    <div class="col-xs-6 col-sm-4 center-horiz">
+    <div class="col-xs-6 col-sm-3 center-horiz">
       <button type="button" class="box box-linked" aria-pressed="false" onclick="btnHref('https://groups.google.com/forum/?hl=en#!forum/arks-forum')" aria-label="ARKs Forum">
         <span class="box-linked-text">ARKs discussion forum</span>
-      </button>
-    </div>
-  </div>
-</div>
-
-  <!-- Spacer 
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="row center-xs">
-  &nbsp;<br/>
-</div>
-
-<div class="container-narrowest">
-  <div class="row center-xs">
-    <div class="box col-xs-8">
-      <h2 class="header2">N2T works with
-      <a href="https://identifiers.org">Identifiers.org</a>
-      to resolve over 600 kinds of <a style="text-decoration: underline;"
-        href="/e/compact_ids.html">prefixed identifiers</a>.
-      You can add yours too.</h2>
-      <button type="button" class="box box-linked" aria-pressed="false"
-        onclick="btnHref('https://www.n2t.net/e/prefix_request')"
-	aria-label="Register a Prefix">
-        <span class="box-linked-text">Register a Prefix</span>
       </button>
     </div>
   </div>
