Footer placement improved

--- a/homepage.html
+++ b/homepage.html
@@ -19,6 +19,8 @@
 </head>
 
 <body class="background-home">
+<div class="content">
+
 <header class="header row center-xs">
   <div class="col-xs-10 col-sm-10">
     <div class="row middle-xs header">
@@ -133,6 +135,15 @@
     </div>
   </div>
 </div>
+
+<!-- Spacer -->
+<div class="row center-xs">
+    &nbsp;<br/><br/>
+</div>
+
+</div>
+<!-- End of content block -->
+
 
 <!--#include virtual="/e/footer.html" -->
   <!-- Function for button links -->
