--- a/n2t_apidoc.html
+++ b/n2t_apidoc.html
@@ -5,6 +5,7 @@
   <title>N2T API and UI</title>
 </head>
 <body>
+<div class="content">
 <!--#include virtual="/e/header.html" -->
 <!--#include virtual="breadcrumb_n2t_apidoc.html" -->
 <div class="container-narrowest">
@@ -557,7 +558,13 @@ ark:/12345/fk3</blockquote>
 <blockquote>
 https://n2t.net/ark:/12345/fk3</blockquote>
 <p>More generally, the form follows n2t.net/<em>scheme:[/]naan/string</em>.</p>
+<div class="line-block">
+<div class="line"><br /></div>
+<div class="line"><br /></div>
+<div class="line"><br /></div>
+</div>
 
+</div>
 </div>
 </div>
 </div>
